// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiFileUploader renders a basic multi-file upload component 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
    }
  }
>
  <div
    id="key"
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "border": "1px solid lightgrey",
        "borderRadius": "4px",
        "cursor": "pointer",
        "display": "flex",
        "flexDirection": "column",
        "height": "50%",
        "justifyContent": "space-between",
        "margin": "0 6px 6px 0",
        "maxHeight": "100%",
        "overflow": "hidden",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "width": "50px",
      }
    }
  >
    <img
      className="img-fluid"
      src="https://feathery.tech"
      style={
        Object {
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": 0,
        }
      }
    />
    <div
      style={
        Object {
          "background": "#000000",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      Upload file...
    </div>
    <input
      accept="image/*"
      multiple={true}
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="file"
    />
  </div>
</div>
`;

exports[`MultiFileUploader renders a multi-file upload component with initial files 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "1px solid lightgrey",
        "borderRadius": "4px",
        "display": "flex",
        "height": "50%",
        "justifyContent": "center",
        "margin": "0 6px 6px 0",
        "maxHeight": "100%",
        "overflow": "hidden",
        "position": "relative",
        "width": "50px",
      }
    }
  >
    <img
      className=""
      src="www.google.com"
      style={
        Object {
          "maxHeight": "100%",
          "maxWidth": "100%",
        }
      }
    />
    <div
      onClick={[Function]}
      style={
        Object {
          "alignItems": "center",
          "background": "#AAA",
          "borderRadius": "50%",
          "color": "white",
          "cursor": "pointer",
          "display": "flex",
          "height": "16px",
          "justifyContent": "center",
          "position": "absolute",
          "right": "4px",
          "top": "4px",
          "width": "16px",
        }
      }
    >
      <svg
        className="clear"
        fill="none"
        height="12px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "1px solid lightgrey",
        "borderRadius": "4px",
        "display": "flex",
        "height": "50%",
        "justifyContent": "center",
        "margin": "0 6px 6px 0",
        "maxHeight": "100%",
        "overflow": "hidden",
        "position": "relative",
        "width": "50px",
      }
    }
  >
    <img
      className=""
      src="www.feathery.biz.org.com.ru"
      style={
        Object {
          "maxHeight": "100%",
          "maxWidth": "100%",
        }
      }
    />
    <div
      onClick={[Function]}
      style={
        Object {
          "alignItems": "center",
          "background": "#AAA",
          "borderRadius": "50%",
          "color": "white",
          "cursor": "pointer",
          "display": "flex",
          "height": "16px",
          "justifyContent": "center",
          "position": "absolute",
          "right": "4px",
          "top": "4px",
          "width": "16px",
        }
      }
    >
      <svg
        className="clear"
        fill="none"
        height="12px"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </div>
  <div
    id="key"
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "border": "1px solid lightgrey",
        "borderRadius": "4px",
        "cursor": "pointer",
        "display": "flex",
        "flexDirection": "column",
        "height": "50%",
        "justifyContent": "space-between",
        "margin": "0 6px 6px 0",
        "maxHeight": "100%",
        "overflow": "hidden",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "width": "50px",
      }
    }
  >
    <img
      className="img-fluid"
      src="https://feathery.tech"
      style={
        Object {
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": 0,
        }
      }
    />
    <div
      style={
        Object {
          "background": "#000000",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      Upload file...
    </div>
    <input
      accept="image/*"
      multiple={true}
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="file"
    />
  </div>
</div>
`;
